tests/data/php/shouldfail/ConstantCase.php
<?php
/**
 * @package testdata.shouldfail
 */
class ConstantCase {
    const foo = 'BAR';
}